# rustup.rs

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
ci/: prepare-deploy-appveyor.ps1  prepare-deploy-travis.sh  run.sh
src/: main.rs
src/rustup/: lib.rs
src/rustup-cli/: main.rs
src/rustup-dist/: Cargo.toml
src/rustup-dist/src/: lib.rs
src/rustup-utils/: Cargo.toml
src/rustup-utils/src/: errors.rs  lib.rs
