[package]

name = "rustup"
version = "0.6.1"
authors = [ "Diggory Blake <diggsey@googlemail.com>" ]
description = "multirust in rust - manage multiple rust installations with ease"

documentation = "http://rust-lang-nursery.github.io/rustup.rs/rustup/index.html"
homepage = "https://github.com/rust-lang-nursery/rustup.rs"
repository = "https://github.com/rust-lang-nursery/rustup.rs"

readme = "README.md"

keywords = ["multirust", "install", "proxy"]

license = "MIT OR Apache-2.0"

[dependencies]
rustup-dist = { path = "src/rustup-dist", version = "0.6.1" }
rustup-utils = { path = "src/rustup-utils", version = "0.6.1" }
error-chain = "0.4.0"
libc = "0.2.0"

[profile.release]
debug = true
