[package]

name = "rustup-dist"
version = "0.6.1"
authors = [ "Diggory Blake <diggsey@googlemail.com>" ]
description = "Installation from a Rust distribution server"

documentation = "http://rust-lang-nursery.github.io/rustup.rs/rustup_dist/index.html"
homepage = "https://github.com/rust-lang-nursery/rustup.rs"
repository = "https://github.com/rust-lang-nursery/rustup.rs"

license = "MIT OR Apache-2.0"

[dependencies]
error-chain = "0.4.0"

[lib]
name = "rustup_dist"
